original artworks create

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,13 +2,14 @@
 * stylesheet.css v0.0.2
 *
 * Copyright 2011 Sevenuc Consulting
-* Language technology solutions and consulting services.
+* Original artworks creating, music, painting, poem and shodo (calligraphy).
 * http://www.sevenuc.com
 *
 */
 @charset "UTF-8";
 
 body {background:#000000;color:#4b5b69;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;max-width: 64rem;margin-left: auto;margin-right: auto;margin-bottom: 50px;}
+.outer { max-width: 32rem;margin-left: auto; margin-right: auto;margin-bottom: 50px;}
 h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444; color: #687E91;}
 #project_tagline { color: #007f00;}
 a { color: #08c; text-decoration: none;}
