--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@
 */
 @charset "UTF-8";
 
-body {background:#ffffee;color:#4b5b69;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;max-width: 64rem;margin-left: auto;margin-right: auto;margin-bottom: 50px;}
+body {background:#ffffee;color:#4b5b69;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;margin-left: auto;margin-right: auto;margin-bottom: 50px;font-size: small;max-width: 64rem;}
 .outer { max-width: 32rem;margin-left: auto; margin-right: auto;margin-bottom: 50px;}
 h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444; color: #687E91;}
 #project_tagline { color: #007f00;}
@@ -28,9 +28,9 @@ ltab { margin-left: 20px; }
 .bigtitle { font-size: 17.0em;}
 .underline { border-bottom:1px solid #4b5b69;}
 .smallicon { height:32px; width:auto; vertical-align:middle;}
-b, strong, .hilight {font-weight: bold;color: #687E91;}
+b, strong, .hilight {color: #687E91;font-weight: bold;}
 i {font-style: italic; }
-img { background: rgba(0, 0, 0, 0);}
+img { background: rgba(0, 0, 0, 0);border-width: 0px;}
 hr { margin-bottom: 5px; border: 1px dotted #9fa8b5; }
 .screenshots { max-width:100%;height:auto;}
 .smallscreen { max-width: 64rem; }
@@ -40,7 +40,7 @@ hr { margin-bottom: 5px; border: 1px dotted #9fa8b5; }
 .block b {color:#000000;}
 .block { background:#9fa8b5; color:#000000;font-style: italic; padding:10px 10px 10px 10px; border-radius: 4px; }
 .small b {color:#000000;}
-.small { font-style: italic; font-size: small; color:#000000; background: #9fa8b5; padding:4px 4px 4px 4px; border-radius: 2px; }
+.small { font-style: italic; font-size: small; color:#000000; background: #E0E0E0; padding:4px 4px 4px 4px; border-radius: 2px; }
 .appstore_download_link { display: block; float: left; width:224px; height:70px; text-indent: -5000px; overflow: hidden; margin-left: 0px; background: url(../images/appstore.png) no-repeat bottom right; }
 .appstore_download_link:hover { background: url(../images/appstore.png) no-repeat top right; }
 table { border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
