--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,7 @@
 @charset "UTF-8";
 
 body {background:#ffffee;color:#4b5b69;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;margin-left: auto;margin-right: auto;margin-bottom: 50px;font-size: small;max-width: 64rem;}
-.outer { max-width: 32rem;margin-left: auto; margin-right: auto;margin-bottom: 50px;}
+.outer { margin-left: auto; margin-right: auto;margin-bottom: 50px;background:#fffff0;max-width: 64rem;}
 h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444; color: #687E91;}
 #project_tagline { color: #007f00;}
 a { color: #08c; text-decoration: none;}
@@ -28,7 +28,8 @@ ltab { margin-left: 20px; }
 .bigtitle { font-size: 17.0em;}
 .underline { border-bottom:1px solid #4b5b69;}
 .smallicon { height:32px; width:auto; vertical-align:middle;}
-b, strong, .hilight {color: #687E91;font-weight: bold;}
+b, strong, .hilight {color: #303010;font-weight: bold;}
+.warning {color:#cce619; font-weight: bold;}
 i {font-style: italic; }
 img { background: rgba(0, 0, 0, 0);border-width: 0px;}
 hr { margin-bottom: 5px; border: 1px dotted #9fa8b5; }
