--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,8 +9,8 @@
 @charset "UTF-8";
 
 
-body {background: url(../images/bg-pattern.gif) repeat top left;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;margin-left: auto;margin-right: auto;margin-bottom: 50px;font-size: small; max-width: 32rem;color: #ffffff;}
-.outer { margin-left: auto; margin-right: auto; margin-bottom: 0px;background: url(../images/bg-pattern2.gif) repeat top left; max-width: 32rem; padding:4px 4px 4px 4px; border-radius: 4px;}
+body {background: url(../images/bg-pattern.gif) repeat top left;font-family:  'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', sans-serif, Helvetica Neue, Helvetica, Meiryo, 'MS PGothic', Arial, Tahoma, Verdana, Lucida Grande;margin-left: auto;margin-right: auto;margin-bottom: 50px;font-size: small; max-width: 32rem;color: #ffffff;line-break: auto;}
+.outer { margin-left: auto; margin-right: auto; margin-bottom: 0px;background: url(../images/bg-pattern2.gif) repeat top left; max-width: 32rem; padding:4px 4px 4px 4px; border-radius: 4px;line-break: auto;}
 h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444; color: #687E91;}
 #project_tagline { color: #007f00;}
 a { color: #FFFF00; text-decoration: none;}
