--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,10 +20,10 @@ a:visited { color: #FF00FF; }
 .logo {height:42px;width:auto;float:left;vertical-align:middle;margin-top:4px;margin-right:10px;border: 1px rgba(255,255,255,0.6) solid;}
 .logo:hover  { border: 1px #FFFFFF solid; }
 .headerimg { padding: 10px 10px 10px 10px;background: #f0f0f0;border: 1px rgba(255,255,255,0.6) solid; border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px;}
-pre { max-width:100%; padding:4px 4px 4px 4px;}
+pre { max-width:100%; padding:4px 4px 4px 4px;line-break: auto;}
 lt {color:#007f00;}
 .none {  padding:0;  margin: 0; }
-.green { color: #007f00;font-weight: bold;}
+.green, gr, lt { color: #fffff0;font-weight: bold;}
 ltab { margin-left: 20px; }
 .bigtitle { font-size: 17.0em;}
 .underline { border-bottom:1px solid #4b5b69;}
