--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,6 +23,7 @@ a:visited { color: #FF00FF; }
 pre { max-width:100%; padding:4px 4px 4px 4px;line-break: auto;}
 lt {color:#007f00;}
 .none {  padding:0;  margin: 0; }
+.greenbig {color: #007f00;font-size:1.2em;}
 .green, gr, lt { color: rgb(0,255,0);font-weight: bold;}
 ltab { margin-left: 20px; }
 .bigtitle { font-size: 17.0em;}
