--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,6 +27,7 @@ lt {color:#007f00;}
 .green, gr, lt { color: #007f00;font-weight: bold;} /*rgb(0,255,0);*/
 ltab { margin-left: 20px; }
 .bigtitle { font-size: 17.0em;}
+.strike {text-decoration: line-through;}
 .underline { border-bottom:1px solid #4b5b69;}
 .smallicon { height:32px; width:auto; vertical-align:middle;}
 b, strong, .hilight {color: #80FF80;font-weight: bold;}
