--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,8 +16,10 @@
 
 
 @charset "UTF-8";
+
+html { height: 100%;}
 body { background:#1a2024; }
-html, body, button, input, select, textarea{font-family: sans-serif;font-size: 14px;color: #9aaeb5}
+html, body, button, input, select, textarea{ font-family: sans-serif; font-size: 14px;color: #9aaeb5}
 h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444; color: #6799ff; display: block;}
 .logo {height:42px;width:auto;vertical-align:middle;margin-top:4px;margin-right:10px;border: 1px rgba(255,255,255,0.6) solid;}
 .logo:hover  { border: 1px #FFFFFF solid; }
@@ -50,7 +52,7 @@ b, strong, .hilight {font-weight: bold;}
 i, em {font-style: italic; }
 img { background-color: transparent;border-width: 0px;max-width: 100%;}
 hr { border: 1px dotted #9fa8b5; max-width: 714px; margin-left: 0px;}
-.screenshots { max-width:100%; height:auto;margin-left: 10px; margin: 0 0 10 0; }
+.screenshots { max-width:100%; height:auto;margin-left: 0px; margin: 0 0 10 0; }
 .tips { width:auto; height: 22px;}
 .videobox {background:#111160;}
 .screen {width:320px; height:auto;max-width:100%;}
