--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -72,7 +72,7 @@ form { background: #f2f2f2; padding: 10px; }
 .icon { margin: 0 1em 1em 0;width:96px;height:auto;padding: 4px 4px 4px 4px;border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px; vertical-align:center;}
 .jumbotron, .lead { margin: 0 0 0 0; padding: 0 0 1em 0}
 h1, h2, p, pre, li, .block, .block2, .carousel { max-width: 714px; }
-footer { color:#687E91;border-top:1px solid #9fa8b5;font-size:small; margin-bottom:40px;}
+footer { color:#687E91;border-top:1px solid #9fa8b5;font-size:small; font-style: italic;margin-bottom:40px;}
 footer img { padding-top: 4px; background: #111160;}
 
 
