--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,80 +1,40 @@
 /*!
-* stylesheet.css v1.0.21
+* stylesheet.css v0.0.21
 *
 * Copyright 2006-2021 Sevenuc Consulting
 * http://www.sevenuc.com
 *
 */
 
-/*************************************************************************************/
-/***  Copyright Notice                                                             ***/
-/***  This colour scheme was originally created by Sevenuc Consulting              ***/
-/***                                                                               ***/
-/***  THIS FILE IS PART OF THE WEBSITE SEVENUC.COM, WITHOUT THE WRITTEN PERMISSION ***/
-/***  OF THE AUTHOR THIS FILE MAY NOT BE USED FOR ANY COMMERCIAL PRODUCT.          ***/
-/*************************************************************************************/
-
-
 @charset "UTF-8";
 
 html { height: 100%;}
-body { margin-bottom: 50px; background: #0d1116;/*#1a2024;*/ color: #bebebe;/*#fff;*/ }
-html, body, button, input, select, textarea { font-family: sans-serif; font-size: 14px; /*color: #9aaeb5; */}
-h1, h2, h3, h4, h5, h6 { font-weight: 700; text-shadow: 1px 1px #444;  display: block; color: #6799ff;}
-h1, h2, p, pre, li, .block, .block2, .carousel { max-width: 64rem; }
-.jumbotron { background: #0d1116; }
-.jumbotron pre{ color: #c990ff; }
-.jumbotron, .lead { margin: 0 0 0 0; padding: 0 0 1em 0}
-.container-fluid { max-width: 64rem; margin-left:0px; margin-right:auto;}
-.logo {height:42px;width:auto;vertical-align:middle;margin-top:4px;margin-right:10px;border: 1px rgba(255,255,255,0.6) solid;}
-.logo:hover  { border: 1px #FFFFFF solid; }
-a:link { color: #604dac; }
-/*a:hover { text-decoration: none; }*/
-/*a:focus { text-decoration: underline; }*/
-a:visited { color: #336699; }
-/*.jumbotron img { float: left; margin-right:1em; } */
-.headerimg { padding: 10px 10px 10px 10px;border: 1px rgba(255,255,255,0.6) solid; border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px;background: #f0f0f0;}
-pre { max-width:100%; padding:4px 4px 4px 4px;line-break: auto; background: #e9ecef; }
-lt {color:#007f00;}
-.none {  padding:0;  margin: 0; }
-.dark { color:#7577a0;/*#303000*/ font-size: 12px;} /* #b397db */
-.red { color:#f35252;}
-.greenbig {color: #007f00;font-weight: 600;}
-.hilight {color: #b397db;font-weight: 600;}
-.green, gr, lt { color: #007f00;font-weight: bold;} /*rgb(0,255,0);*/
-ltab { margin-left: 20px; }
-.footer-link, a:link { color: #604dac; }
-.donate { font-style: italic; font-size: small; color:#007f00;}
-.bigtitle { font-size: 17.0em;}
-.strike {text-decoration: line-through;}
-/*.underline { text-decoration: underline; }*/
-.underline { border-bottom:1px solid #4b5b69;}
-.floatleft {float:left; margin-top:0.2em;margin-right:0.5em;margin-bottom:0.5em;}
-.floatright {float:right; margin-top:0.2em;margin-left:0.5em;margin-bottom:0.5em;}
-.smallicon { height:32px; width:auto; vertical-align:middle;margin-right:10px;}
+body { font-family: sans-serif;}
+.container-fluid { max-width:64rem; }
+pre, .block { background: #22293c; color: #fff; font-style: italic; font-size: small; border-radius: 4px; }
+pre, .block { font-family: monospace; max-width:100%; padding: 8px 8px 8px 8px; line-break: auto; }
+.icon { height:32px; width:auto; vertical-align:middle;margin-right:10px;}
 .treasure { color: rgba(255, 0, 255, 0.5); font-size: 11px;font-style: italic; font-weight: bold; background: none; }
 b, strong, .hilight {font-weight: bold;}
-.warning {color: #ff7f75; font-weight: bold;}
+.warning { font-weight: bold;}
 i, em {font-style: italic; }
-img { background-color: transparent;border-width: 0px; max-width: 100%;}
-hr { border: 1px dotted #9fa8b5; margin-left: 0px; /*max-width: 714px;*/}
-.screenshots { max-width:64rem; height:auto;margin-left: 0px; margin: 0 0 10 0; }
+w {color:#ffc8c8; font-weight: bold;}
+hr { border: 0; border-top: 1px solid #9fa8b5; height: 1px; }
 .tips { width:auto; height: 22px;}
-.videobox {background:#111160;}
-.screen {width:320px; height:auto;max-width:100%;}
-.note {color:#ffffff; background:#FF4081; border-radius: 4px; padding:2px 2px 2px 2px;}
-.button { width: auto; height: 16pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: #f0f0f0;}
-pre, .block { background:#22293c; color:#7577a0; font-style: italic; padding:10px 10px 10px 10px; border-radius: 4px; }
-.small { font-style: italic; font-size: small; padding:4px 4px 4px 4px; border-radius: 2px; color:#7577a0;}
+.videobox { background:#ffffff; }
+img { max-width: 100%;}
+.extraimg { max-width: 320px; margin-left:0;}
+.screen { width:320px; height:auto;max-width:100%;}
+.screenshots { height:auto;margin-left: 0px; margin: 0 0 10 0; max-width: 100%;}
 .appstore_download_link { display: block; float: left; width:224px; height:70px; text-indent: -5000px; overflow: hidden; margin-left: 0px; background: url(../images/appstore.png) no-repeat bottom right; }
 .appstore_download_link:hover { background: url(../images/appstore.png) no-repeat top right; }
 table { border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
 th { text-align: center;font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif; padding: 10px; border: 1px solid #9fa8b5;}
-table { max-width: 100%;}
+table { width:63rem; max-width: 100%;}
 table td { max-width:200px; text-align: left; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
 table img { display: block; width:auto;max-width:100%;}
-form { background: #f2f2f2; padding: 10px; }
-.carousel .carousel-indicators li { width: 10px; height: 10px; border-radius: 100%; }
-.icon { margin: 0 1em 1em 0; padding: 2px 2px 2px 2px;/*4px 4px 4px 4px;*/ border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px; vertical-align:center; height:22px; width: auto; background: #f0f0f0; }
-footer { border-top:1px solid #9fa8b5;font-size:small; font-style: italic; margin-bottom:40px; width: 100%; padding-left: 15px; padding-right: 15px; color: #bebebe; /*#687E91;*/}
+.logo {height:42px;width:auto;vertical-align:middle;margin-top:4px;margin-right:10px; border: 1px rgba(255,255,255,0.6) solid;}
+.logo:hover  { border: 1px #FFFFFF solid; }
+footer { padding-bottom: 50px; border-top:1px solid #9fa8b5;font-size:small; font-style: italic; margin-bottom:40px; width: 100%; padding-right: 15px; }
 footer img { padding-top: 4px; background: #0d1116;}
+
