--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,5 +52,5 @@ table img { display: block; width:auto;max-width:100%;}
 .logo {height:42px;width:auto;vertical-align:middle;margin-top:4px;margin-right:10px; border: 1px rgba(255,255,255,0.6) solid;}
 .logo:hover  { border: 1px #FFFFFF solid; }
 footer { padding-bottom: 50px; border-top:1px solid #9fa8b5;font-size:small; font-style: italic; margin-bottom:40px; width: 100%; padding-right: 15px; }
-footer img { padding-top: 4px; background: #0d1116;}
+footer img { padding-top: 4px; background: #312963;}
 
